# popcorn-native

./: .gitignore  BUILD.md  CMakeLists.txt
.github/workflows/: build-windows.yml
assets/models/: .gitkeep
src/: main.cpp
src/camera/: CameraCapture.cpp  CameraCapture.h
src/core/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/detection/: GestureDetector.cpp  GestureDetector.h  PoseDetector.cpp  PoseDetector.h
src/game/: CollisionSystem.cpp  CollisionSystem.h  FallingItem.h  GameConfig.h  GameEngine.cpp  GameEngine.h
src/render/: ParticleSystem.cpp  ParticleSystem.h  TextRenderer.cpp  TextRenderer.h
